--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700" type="text/css">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="aaa">
@@ -61,6 +61,6 @@
           </ul>
       </div>
 
-    <script type="text/javascript" src="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
