--- a/index.html
+++ b/index.html
@@ -8,58 +8,66 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
+    <div class="matrix">
+      <img
+        src="./eisenhower-matrix.jpg"
+        class="matrix__img"
+      >
       <a
-        class="more_inf"
-        href="https://goal-life.com/page/method/matrix-eisenhower">
+        class="matrix__link"
+        href="https://goal-life.com/page/method/matrix-eisenhower"
+        target="_blank"
+      >
         Want more details?
       </a>
-      </div>
-      <div class="centered-main-page-element">
-        <p id="topSectionForAddingElementToList">
-          <label for="new-task">Add Item</label>
-          <div class="task-row-wrapper">
-            <input id="new-task"class="task" type="text">
-            <button>Add</button>
-          </div>
-        </p>
+    </div>
 
-        <h3>Todo</h3>
-          <ul id="incompleteTasks">
-            <li>
-              <input type="checkbox">
-              <label class="task">Pay Bills</label>
-              <input type="text" class="task">
-              <button class="edit">Edit</button>
-              <button class="delete">
-                <img src="./remove.svg">
-              </button>
-            </li>
-            <li class="editMode">
-              <input type="checkbox">
-              <label class="task">Go Shopping</label>
-              <input type="text" value="Go Shopping" class="task">
-              <button class="edit">Save</button>
-              <button class="delete">
-                <img src="./remove.svg">
-              </button>
-            </li>
-
-          </ul>
-          <h3>Completed</h3>
-          <ul id="completed-tasks">
-            <li>
-              <input type="checkbox" checked>
-              <label class="task">See the Doctor</label>
-              <input type="text" class="task">
-              <button class="edit">Edit</button>
-              <button class="delete">
-                <img src="./remove.svg">
-              </button>
-            </li>
-          </ul>
+    <div class="form">
+      <label for="form__title">Add Item</label>
+      <div class="form__wrapper">
+        <input class="input input_add-item form__input-text" type="text">
+        <button class="form__button button_add">Add</button>
       </div>
+    </div>
+
+    <div class="form">
+      <h3 class="form__title">Todo</h3>
+        <ul class="form__list form__list_tasks-incompleted">
+          <li class="form__item">
+            <input type="checkbox" class="form__input-checkbox">
+            <label class="form__label">Pay Bills</label>
+            <input type="text" class="form__input-text">
+            <button class="form__button button_edit">Edit</button>
+            <button class="form__button button_delete">
+              <img src="./remove.svg" class="button__img-delete">
+            </button>
+          </li>
+          <li class="form__item form__item_edit">
+            <input type="checkbox" class="form__input-checkbox">
+            <label class="form__label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="form__input-text">
+            <button class="form__button button_edit">Save</button>
+            <button class="form__button button_delete">
+              <img src="./remove.svg" class="button__img-delete">
+            </button>
+          </li>
+        </ul>
+    </div>
+
+    <div class="form">
+      <h3 class="form__title">Completed</h3>
+      <ul class="form__list form__list_tasks-completed">
+        <li class="form__item">
+          <input type="checkbox" class="form__input-checkbox" checked>
+          <label class="form__label">See the Doctor</label>
+          <input type="text" class="form__input-text">
+          <button class="form__button button_edit">Edit</button>
+          <button class="form__button button_delete">
+            <img src="./remove.svg" class="button__img-delete">
+          </button>
+        </li>
+      </ul>
+    </div>
 
     <script src="app.js"></script>
   </body>
