fix(advanced-1.1): use correct semanctic HTML tags

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="form">
-      <label for="form__title">Add Item</label>
+      <h1 class="form__title">Add Item</h1>
       <div class="form__wrapper">
         <input class="input input_add-item form__input-text" type="text">
         <button class="form__button button_add">Add</button>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="form">
-      <h3 class="form__title">Todo</h3>
+      <h2 class="form__title">Todo</h2>
         <ul class="form__list form__list_tasks-incompleted">
           <li class="form__item">
             <input type="checkbox" class="form__input-checkbox">
@@ -55,7 +55,7 @@
     </div>
 
     <div class="form">
-      <h3 class="form__title">Completed</h3>
+      <h2 class="form__title">Completed</h2>
       <ul class="form__list form__list_tasks-completed">
         <li class="form__item">
           <input type="checkbox" class="form__input-checkbox" checked>
