fix(advanced-1.2): add alt description for images

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="matrix">
       <img
         src="./eisenhower-matrix.jpg"
+        alt="The Eisenhower's Matrix, or How to Make Decisions on What's Urgent & Important"
         class="matrix__img"
       >
       <a
@@ -39,7 +40,7 @@
             <input type="text" class="form__input-text">
             <button class="form__button button_edit">Edit</button>
             <button class="form__button button_delete">
-              <img src="./remove.svg" class="button__img-delete">
+              <img src="./remove.svg" alt="remove" class="button__img-delete">
             </button>
           </li>
           <li class="form__item form__item_edit">
@@ -48,7 +49,7 @@
             <input type="text" value="Go Shopping" class="form__input-text">
             <button class="form__button button_edit">Save</button>
             <button class="form__button button_delete">
-              <img src="./remove.svg" class="button__img-delete">
+              <img src="./remove.svg" alt="remove" class="button__img-delete">
             </button>
           </li>
         </ul>
@@ -63,7 +64,7 @@
           <input type="text" class="form__input-text">
           <button class="form__button button_edit">Edit</button>
           <button class="form__button button_delete">
-            <img src="./remove.svg" class="button__img-delete">
+            <img src="./remove.svg" alt="remove" class="button__img-delete">
           </button>
         </li>
       </ul>
